docs(spring): the MockitoSpyBean stub regression is closed — 19 of 20 chunks at HotSpot parity
Records the root cause (a package-private CGLIB override defined into a
different runtime package than its superclass, because CratonVM allowed a
reflective ClassLoader.defineClass that HotSpot encapsulates), and the
investigation shortcut: four successively closer standalone probes all passed,
and what actually cracked it was instrumenting the real failing test through a
classpath overlay.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>